# synth-gen-llm

./: LICENSE  pyproject.toml
notebooks/: main.ipynb
src/synth_gen_llm/: __init__.py  main.ipynb
